修改脚本和文档